tests/fixtures/valid/loops/while_loop.pine
//@version=6
indicator("While")
i = 0
while i < 3
    i += 1
plot(i)
