tests/fixtures/invalid/semantic/assignment_vs_reassignment.pine
//@version=6
indicator("Bad")
x := 1
